--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.18",
-    "@types/node": "12.7.5",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "@types/node": "18.0.6",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
+    "react": "^18.2.0",
+    "react-dom": "16.9.0",
     "react-native": "^0.59.1",
+    "react-native-elements": "^3.4.2",
     "react-native-gifted-chat": "0.16.0",
     "react-native-web": "0.11.7",
-    "react-scripts": "3.1.2",
+    "react-scripts": "5.0.1",
     "typescript": "3.6.3"
   },
   "scripts": {
